<resources>
    <string name="app_name">Café Andrade</string>
    <string name="login">Iniciar sesión</string>
    <string name="sign_up_text">Aun no eres miembro</string>
    <string name="sign_up_btn">Registrate</string>
    <string name="singUpFinish_btn">Registrarse ahora</string>
    <string name="title_app">Coffee Sale</string>
    <string name="welcome">Welcome to Coffee Sale</string>
    <string name="existing_account">Ya tengo una cuenta</string>
    <string name="description_logo">Café Andrade</string>
    <string name="description_profile">Profile</string>
    <string name="dollar">$</string>
    <string name="action_logout">Salir</string>
    <string name="required_field">El %1$s es requerido</string>

    <!--Botones-->
    <string name="cancel">Cancelar</string>
    <string name="next">Siguiente</string>
    <string name="buy">Comprar</string>
    <string name="back">Volver</string>
    <string name="order">Ordenar</string>

    <!--Cadenas para dirección-->
    <string name="street">Calle *</string>
    <string name="outdoor_number">No Exterior *</string>
    <string name="interior_number">No Interior</string>
    <string name="postal_code">C.P. *</string>
    <string name="suburb">Colonia *</string>
    <string name="city">Ciudad *</string>
    <string name="town">Municipio *</string>

    <string name="profile_photo_text">Cargar una foto de perfil</string>
    <string name="profile_photo_btn">Seleccionar…</string>
    <string name="email_input">Correo electronico</string>
    <string name="password_input">Contraseña</string>
    <string name="name_input">Nombre(s)</string>
    <string name="lastname_input">Apellido paterno</string>
    <string name="secondLastname_input">Apellido Materno</string>
    <string name="numberWhatsapp_input">Número de WhatsApp</string>
    <string name="profilePicture_txt">Selecciona una foto de perfil</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tab_text_1">Productos</string>
    <string name="tab_text_2">Carrito</string>
    <string name="tab_text_3">Perfil</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="next_button">Siguiente</string>
    <string name="start_order_button">Ordenar</string>

    <!-- TODO: This placeholder text in Payment process -->
    <string name="descriptionPayment">Para finalizar la orden seleccione un método de pago</string>>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test_name_profile">Damian Emerson Zamora Celiseo</string>
    <string name="test_number_profile">2711224784</string>
    <string name="test_email_profile">emer.dzc@gmail.com</string>

    <string name="test_name_detail_product">Product Name</string>
    <string name="test_description_detail_product">Description product</string>
    <string name="test_price_detail_product">Price</string>
    <string name="add_cart_btn">Agregar a carrito</string>
    <string name="title_activity_maps">Map</string>
    <string name="direction">Dirección</string>
    <string name="additional_note">Notas…</string>
    <string name="action_order_state">Mi compra</string>
    <string name="quantity">Cantidad</string>
    <string name="currency">$ %1$d</string>
    <string name="message_positive_popup">Se ha agregado al carrito</string>
    <string name="action_minus">-</string>
    <string name="action_plus">+</string>
    <string name="msg_extra_ingredient">Extra Ingredient</string>
    <string name="action_add_note">Add cook notes</string>
    <string-array name="payment_array">
        <item>Selecciona</item>
        <item>Efectivo</item>
        <item>Tarjeta</item>
    </string-array>
</resources>
