<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.views.login.SignUpScreenFragment">

    <data>

        <import type="android.view.View" />

        <variable
            name="context"
            type="com.dezc.coffeesaleapp.ui.views.login.SignUpScreenFragment" />

        <variable
            name="loading"
            type="boolean" />

        <variable
            name="progress"
            type="Integer" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/signUpContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/choose_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="20dp"
                android:onClick="@{context::openFileChooser}"
                android:text="@string/profile_photo_btn"
                android:textColor="@android:color/widget_edittext_dark"
                app:layout_constraintBottom_toTopOf="@+id/guideline5"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/chooseTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/profile_photo_text"
                app:layout_constraintBottom_toTopOf="@+id/choose_button"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline6"
                app:layout_constraintVertical_bias="1.0" />

            <ImageView
                android:id="@+id/profile_photo_image_view"
                android:layout_width="108dp"
                android:layout_height="108dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/description_profile"
                app:layout_constraintBottom_toTopOf="@+id/guideline5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toTopOf="@+id/guideline6"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@drawable/ic_person_black_24dp" />

            <LinearLayout
                android:id="@+id/login_form"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline5">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:id="@+id/nameTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nameInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/name_input"
                        android:inputType="text"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:id="@+id/lastnameTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lastnameInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/lastname_input"
                        android:inputType="text"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:id="@+id/secondLastnameTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/secondLastnameInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/secondLastname_input"
                        android:inputType="text"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:id="@+id/whatsappNumberTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/whatsappNumberInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/numberWhatsapp_input"
                        android:inputType="text"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <fragment
                    android:id="@+id/fragment2"
                    android:name="com.dezc.coffeesaleapp.ui.components.LoginFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout="@layout/fragment_login" />

                <ProgressBar
                    android:id="@+id/signUpProgressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:progress="@{progress ?? 0}"
                    android:visibility="@{loading ? View.VISIBLE : View.INVISIBLE}"
                    tools:progress="50" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_save"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{context::onSaveClient}"
                    android:text="@string/singUpFinish_btn" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_login"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{context::onExistingAccount}"
                    android:text="@string/existing_account" />

            </LinearLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.6" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="32dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="156dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>